--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -167,6 +167,10 @@ img {
 ._header .header_navigation__item:first-child {
   margin-right: clamp(12px, 0.833vw, 16px);
 }
+._header .header_navigation__item:last-child #search {
+  max-width: 380px;
+  min-width: 380px;
+}
 ._header .header_navigation_menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -181,4 +185,155 @@ img {
 }
 ._header .header_navigation_menu li:last-child {
   margin-right: 0;
+}
+
+._main {
+  margin-top: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+._main .main_box__sidebar {
+  max-width: 380px;
+}
+._main .main_box__sidebar .author_box {
+  margin-bottom: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box__sidebar .author_box img {
+  margin-bottom: clamp(12px, 0.833vw, 16px);
+}
+._main .main_box__sidebar .author_box__text1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 140%;
+  color: #000000;
+  margin-bottom: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__sidebar .author_box__text2 {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 175%;
+  color: #000000;
+}
+._main .main_box__sidebar .pupular_pubs_box {
+  margin-bottom: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box__sidebar .pupular_pubs_box__text1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 140%;
+  color: #000000;
+  margin-bottom: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__sidebar .pupular_pubs_box__item {
+  margin-bottom: clamp(12px, 1.042vw, 20px);
+}
+._main .main_box__sidebar .pupular_pubs_box__item h2 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: #3E6480;
+  margin-bottom: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__sidebar .pupular_pubs_box__item:last-child {
+  margin-bottom: 0;
+}
+._main .main_box__sidebar .pupular_pubs_box__meta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+._main .main_box__sidebar .pupular_pubs_box__meta .data p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: #808080;
+}
+._main .main_box__sidebar .pupular_pubs_box__meta .views {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: clamp(12px, 1.25vw, 24px);
+}
+._main .main_box__sidebar .pupular_pubs_box__meta .views p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: #808080;
+  background: url(../public/eye_icon.png) 0 center no-repeat;
+  background-size: 18px;
+  padding-left: clamp(26px, 1.354vw, 26px);
+}
+._main .main_box__sidebar .pupular_pubs_box__watch_all {
+  margin-top: clamp(8px, 0.833vw, 16px);
+}
+._main .main_box__sidebar .pupular_pubs_box__watch_all a {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 110%;
+  color: #3E6480;
+  text-decoration: underline !important;
+}
+._main .main_box__sidebar .category_box,
+._main .main_box__sidebar .archives_box,
+._main .main_box__sidebar .box_tags {
+  margin-bottom: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box__sidebar .category_box__text1,
+._main .main_box__sidebar .archives_box__text1,
+._main .main_box__sidebar .box_tags__text1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 140%;
+  color: #000000;
+  margin-bottom: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__sidebar .category_box__list li,
+._main .main_box__sidebar .archives_box__list li,
+._main .main_box__sidebar .box_tags__list li {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 138%;
+  color: #808080;
+  margin-bottom: clamp(8px, 0.729vw, 14px);
+}
+._main .main_box__sidebar .category_box__list li a,
+._main .main_box__sidebar .archives_box__list li a,
+._main .main_box__sidebar .box_tags__list li a {
+  color: #3E6480;
+  margin-right: 6px;
+}
+._main .main_box__sidebar .category_box__list li:last-child,
+._main .main_box__sidebar .archives_box__list li:last-child,
+._main .main_box__sidebar .box_tags__list li:last-child {
+  margin-bottom: 0;
+}
+._main .main_box__sidebar .box_tags__list {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+._main .main_box__sidebar .box_tags__list li {
+  margin-bottom: clamp(6px, 0.417vw, 8px);
+  margin-right: clamp(6px, 0.417vw, 8px);
 }
