--- a/assets/sass/main/_main.scss
+++ b/assets/sass/main/_main.scss
@@ -4,9 +4,7 @@
   background: #FFFFFF;
   box-shadow: 8px -3px 30px rgba(0, 0, 0, 0.25);
 
-  @media (max-width: 767px) {
-    
-  }
+  @media (max-width: 767px) {}
 
   .header_navigation {
     display: flex;
@@ -16,6 +14,13 @@
     &__item {
       &:first-child {
         @include adaptive(margin-right, 12, 16);
+      }
+
+      &:last-child {
+        #search {
+          max-width: 380px;
+          min-width: 380px;
+        }
       }
     }
   }
@@ -30,6 +35,168 @@
 
       &:last-child {
         margin-right: 0;
+      }
+    }
+  }
+}
+
+._main {
+  @include adaptive(margin-top, 16, 40);
+
+  .main_box {
+    display: flex;
+    justify-content: space-between;
+
+    &__posts {}
+
+    &__sidebar {
+      max-width: 380px;
+
+      .author_box {
+        @include adaptive(margin-bottom, 16, 40);
+
+        img {
+          @include adaptive(margin-bottom, 12, 16);
+        }
+
+        &__text1 {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 140%;
+          color: #000000;
+          @include adaptive(margin-bottom, 8, 12);
+        }
+
+        &__text2 {
+          font-style: italic;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 175%;
+          color: #000000;
+        }
+      }
+
+      .pupular_pubs_box {
+        @include adaptive(margin-bottom, 16, 40);
+
+        &__text1 {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 140%;
+          color: #000000;
+          @include adaptive(margin-bottom, 8, 12);
+        }
+
+        &__item {
+          @include adaptive(margin-bottom, 12, 20);
+
+          h2 {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 162%;
+            color: #3E6480;
+            @include adaptive(margin-bottom, 8, 12);
+          }
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+
+        &__meta {
+          display: flex;
+          align-items: center;
+
+          .data {
+            p {
+              font-style: normal;
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 100%;
+              color: #808080;
+            }
+          }
+
+          .views {
+            display: flex;
+            align-items: center;
+            @include adaptive(margin-left, 12, 24);
+
+            p {
+              font-style: normal;
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 100%;
+              color: #808080;
+              background: url(../public/eye_icon.png) 0 center no-repeat;
+              background-size: 18px;
+
+              @include adaptive(padding-left, 26, 26);
+            }
+          }
+        }
+
+        &__watch_all {
+          @include adaptive(margin-top, 8, 16);
+
+          a {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 110%;
+            color: #3E6480;
+            text-decoration: underline !important;
+          }
+        }
+      }
+
+      .category_box,
+      .archives_box,
+      .box_tags {
+        @include adaptive(margin-bottom, 16, 40);
+
+        &__text1 {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 140%;
+          color: #000000;
+          @include adaptive(margin-bottom, 8, 12);
+        }
+
+        &__list {
+          li {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 138%;
+            color: #808080;
+            @include adaptive(margin-bottom, 8, 14);
+
+            a {
+              color: #3E6480;
+              margin-right: 6px;
+            }
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
+
+      .box_tags {
+        &__list {
+          display: inline-flex;
+
+          li {
+            @include adaptive(margin-bottom, 6, 8);
+            @include adaptive(margin-right, 6, 8);
+          }
+        }
       }
     }
   }
