--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@
   --clr-gray-lt: #f3f5f9;
   --clr-gray: #596060;
   --clr-accent: #FF6C18;
-  --font-main: "Raleway", Arial, Helvetica, sans-serif;
+  --font-main: "Inter", Arial, Helvetica, sans-serif;
   --fz56: clamp(20px, 2.91vw, 56px);
   --fz40: clamp(18px, 2.08vw, 40px);
   --fz32: clamp(18px, 1.66vw, 32px);
@@ -147,8 +147,8 @@ img {
 }
 
 ._header {
-  padding-top: clamp(16px, 1.979vw, 38px);
-  padding-bottom: clamp(16px, 1.979vw, 38px);
+  padding-top: clamp(16px, 1.25vw, 24px);
+  padding-bottom: clamp(16px, 1.25vw, 24px);
   background: #FFFFFF;
   -webkit-box-shadow: 8px -3px 30px rgba(0, 0, 0, 0.25);
           box-shadow: 8px -3px 30px rgba(0, 0, 0, 0.25);
@@ -168,8 +168,41 @@ img {
   margin-right: clamp(12px, 0.833vw, 16px);
 }
 ._header .header_navigation__item:last-child #search {
+  padding: clamp(12px, 0.833vw, 16px);
+  padding-left: clamp(40px, 2.604vw, 50px);
+  background: url(../public/search_icon.svg) 16px center no-repeat;
   max-width: 380px;
   min-width: 380px;
+  border: 1px solid #D9D9D9;
+  border-radius: 16px;
+  outline: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 114%;
+}
+._header .header_navigation__item:last-child #search::-webkit-input-placeholder {
+  color: #BABABA;
+}
+._header .header_navigation__item:last-child #search::-moz-placeholder {
+  color: #BABABA;
+}
+._header .header_navigation__item:last-child #search:-ms-input-placeholder {
+  color: #BABABA;
+}
+._header .header_navigation__item:last-child #search::-ms-input-placeholder {
+  color: #BABABA;
+}
+._header .header_navigation__item:last-child #search::placeholder {
+  color: #BABABA;
+}
+._header .header_navigation__item:last-child #search::-ms-clear, ._header .header_navigation__item:last-child #search::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+._header .header_navigation__item:last-child #search::-webkit-search-decoration, ._header .header_navigation__item:last-child #search::-webkit-search-cancel-button, ._header .header_navigation__item:last-child #search::-webkit-search-results-button, ._header .header_navigation__item:last-child #search::-webkit-search-results-decoration {
+  display: none;
 }
 ._header .header_navigation_menu {
   display: -webkit-box;
@@ -182,9 +215,14 @@ img {
 ._header .header_navigation_menu li {
   margin-right: clamp(12px, 1.667vw, 32px);
   cursor: pointer;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
 }
 ._header .header_navigation_menu li:last-child {
   margin-right: 0;
+}
+._header .header_navigation_menu li:hover {
+  color: #3E6480;
 }
 
 ._main {
@@ -197,6 +235,150 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+._main .main_box__posts {
+  margin-right: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box__posts .navigation {
+  margin-top: clamp(16px, 3.333vw, 64px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+._main .main_box__posts .navigation h2 {
+  display: none !important;
+}
+._main .main_box__posts .navigation .prev,
+._main .main_box__posts .navigation .next {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 117%;
+  color: #3E6480;
+}
+._main .main_box__posts .navigation .current {
+  color: #3E6480;
+}
+._main .main_box__posts .navigation .prev {
+  margin-right: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__posts .navigation .next {
+  margin-left: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__post {
+  margin-bottom: clamp(16px, 2.083vw, 40px);
+}
+._main .main_box__post .attachment-post_thumb {
+  width: 100%;
+}
+._main .main_box__post__box_img {
+  position: relative;
+  margin-bottom: clamp(8px, 0.833vw, 16px);
+}
+._main .main_box__post__data {
+  padding: clamp(8px, 0.521vw, 10px);
+  padding-top: clamp(6px, 0.313vw, 6px);
+  padding-bottom: clamp(6px, 0.313vw, 6px);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 186%;
+  color: #FFFFFF;
+}
+._main .main_box__post__tags {
+  margin-bottom: clamp(12px, 0.833vw, 16px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+._main .main_box__post__tags li {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 129%;
+  color: #3E6480;
+  margin-right: clamp(8px, 1.042vw, 20px);
+}
+._main .main_box__post__tags li:last-child {
+  margin-right: 0;
+}
+._main .main_box__post__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 150%;
+  color: #333;
+  margin-bottom: clamp(8px, 0.625vw, 12px);
+}
+._main .main_box__post__text p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 188% !important;
+  color: #333;
+}
+._main .main_box__post__bottom_box {
+  margin-top: clamp(12px, 0.729vw, 14px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+._main .main_box__post__button {
+  margin-right: clamp(12px, 1.667vw, 32px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+._main .main_box__post__button .button {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 186%;
+  color: #3E6480;
+  border: 1px solid #3E6480;
+  padding: clamp(16px, 2.083vw, 40px);
+  padding-top: clamp(12px, 0.625vw, 12px);
+  padding-bottom: clamp(12px, 0.625vw, 12px);
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+._main .main_box__post__button .button:hover {
+  background: #3E6480;
+  color: #fff;
+}
+._main .main_box__post__view {
+  margin-right: clamp(12px, 1.667vw, 32px);
+}
+._main .main_box__post__view p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  color: #808080;
+  background: url(../public/eye_icon.png) 0 center no-repeat;
+  background-size: 18px;
+  padding-left: clamp(26px, 1.354vw, 26px);
+}
+._main .main_box__post__comments p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  color: #808080;
+  background: url(../public/comment_icon.png) 0 center no-repeat;
+  background-size: 18px;
+  padding-left: clamp(26px, 1.354vw, 26px);
 }
 ._main .main_box__sidebar {
   max-width: 380px;
@@ -294,12 +476,14 @@ img {
 }
 ._main .main_box__sidebar .category_box,
 ._main .main_box__sidebar .archives_box,
-._main .main_box__sidebar .box_tags {
+._main .main_box__sidebar .box_tags,
+._main .main_box__sidebar .socials_box {
   margin-bottom: clamp(16px, 2.083vw, 40px);
 }
 ._main .main_box__sidebar .category_box__text1,
 ._main .main_box__sidebar .archives_box__text1,
-._main .main_box__sidebar .box_tags__text1 {
+._main .main_box__sidebar .box_tags__text1,
+._main .main_box__sidebar .socials_box__text1 {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -309,7 +493,8 @@ img {
 }
 ._main .main_box__sidebar .category_box__list li,
 ._main .main_box__sidebar .archives_box__list li,
-._main .main_box__sidebar .box_tags__list li {
+._main .main_box__sidebar .box_tags__list li,
+._main .main_box__sidebar .socials_box__list li {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -319,19 +504,53 @@ img {
 }
 ._main .main_box__sidebar .category_box__list li a,
 ._main .main_box__sidebar .archives_box__list li a,
-._main .main_box__sidebar .box_tags__list li a {
+._main .main_box__sidebar .box_tags__list li a,
+._main .main_box__sidebar .socials_box__list li a {
   color: #3E6480;
   margin-right: 6px;
 }
 ._main .main_box__sidebar .category_box__list li:last-child,
 ._main .main_box__sidebar .archives_box__list li:last-child,
-._main .main_box__sidebar .box_tags__list li:last-child {
+._main .main_box__sidebar .box_tags__list li:last-child,
+._main .main_box__sidebar .socials_box__list li:last-child {
   margin-bottom: 0;
+}
+._main .main_box__sidebar .socials_box {
+  margin-bottom: clamp(6px, 1.563vw, 30px);
+}
+._main .main_box__sidebar .socials_box__list {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+._main .main_box__sidebar .socials_box__list li {
+  margin-right: clamp(12px, 0.833vw, 16px);
+  margin-bottom: clamp(10px, 0.625vw, 12px);
+}
+._main .main_box__sidebar .socials_box__list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+._main .main_box__sidebar .socials_box__list li a p {
+  margin-left: clamp(6px, 0.417vw, 8px);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  color: #3E6480;
 }
 ._main .main_box__sidebar .box_tags__list {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 ._main .main_box__sidebar .box_tags__list li {
   margin-bottom: clamp(6px, 0.417vw, 8px);
