--- a/assets/sass/main/_main.scss
+++ b/assets/sass/main/_main.scss
@@ -1,6 +1,6 @@
 ._header {
-  @include adaptive(padding-top, 16, 38);
-  @include adaptive(padding-bottom, 16, 38);
+  @include adaptive(padding-top, 16, 24);
+  @include adaptive(padding-bottom, 16, 24);
   background: #FFFFFF;
   box-shadow: 8px -3px 30px rgba(0, 0, 0, 0.25);
 
@@ -17,9 +17,38 @@
       }
 
       &:last-child {
+
         #search {
+          @include adaptive(padding, 12, 16);
+          @include adaptive(padding-left, 40, 50);
+          background: url(../public/search_icon.svg) 16px center no-repeat;
           max-width: 380px;
           min-width: 380px;
+          border: 1px solid #D9D9D9;
+          border-radius: 16px;
+          outline: none;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 114%;
+
+          &::placeholder {
+            color: #BABABA;
+          }
+
+          &::-ms-clear,
+          &::-ms-reveal {
+            display: none;
+            width: 0;
+            height: 0;
+          }
+
+          &::-webkit-search-decoration,
+          &::-webkit-search-cancel-button,
+          &::-webkit-search-results-button,
+          &::-webkit-search-results-decoration {
+            display: none;
+          }
         }
       }
     }
@@ -32,9 +61,14 @@
     li {
       @include adaptive(margin-right, 12, 32);
       cursor: pointer;
+      transition: all 0.6s ease;
 
       &:last-child {
         margin-right: 0;
+      }
+
+      &:hover {
+        color: #3E6480;
       }
     }
   }
@@ -47,7 +81,165 @@
     display: flex;
     justify-content: space-between;
 
-    &__posts {}
+    &__posts {
+      @include adaptive(margin-right, 16, 40);
+
+      .navigation {
+        @include adaptive(margin-top, 16, 64);
+        display: flex;
+        justify-content: center;
+
+        h2 {
+          display: none !important;
+        }
+
+        .prev,
+        .next {
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 117%;
+          color: #3E6480;
+        }
+
+        .current {
+          color: #3E6480;
+        }
+
+        .prev {
+          @include adaptive(margin-right, 8, 12);
+        }
+
+        .next {
+          @include adaptive(margin-left, 8, 12);
+        }
+      }
+    }
+
+    &__post {
+      @include adaptive(margin-bottom, 16, 40);
+
+      .attachment-post_thumb {
+        width: 100%;
+      }
+
+      &__box_img {
+        position: relative;
+        @include adaptive(margin-bottom, 8, 16);
+      }
+
+      &__data {
+        @include adaptive(padding, 8, 10);
+        @include adaptive(padding-top, 6, 6);
+        @include adaptive(padding-bottom, 6, 6);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.2);
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 186%;
+        color: #FFFFFF;
+
+      }
+
+      &__tags {
+        @include adaptive(margin-bottom, 12, 16);
+        display: flex;
+        flex-wrap: wrap;
+
+        li {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 129%;
+          color: #3E6480;
+          @include adaptive(margin-right, 8, 20);
+
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+
+      &__title {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 150%;
+        color: #333;
+        @include adaptive(margin-bottom, 8, 12);
+      }
+
+      &__text {
+        p {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 188% !important;
+          color: #333;
+        }
+      }
+
+      &__bottom_box {
+        @include adaptive(margin-top, 12, 14);
+        display: flex;
+        align-items: center;
+      }
+
+      &__button {
+        @include adaptive(margin-right, 12, 32);
+        display: flex;
+
+        .button {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 186%;
+          color: #3E6480;
+          border: 1px solid #3E6480;
+          @include adaptive(padding, 16, 40);
+          @include adaptive(padding-top, 12, 12);
+          @include adaptive(padding-bottom, 12, 12);
+          transition: all 0.6s ease;
+
+          &:hover {
+            background: #3E6480;
+            color: #fff;
+          }
+        }
+      }
+
+      &__view {
+        @include adaptive(margin-right, 12, 32);
+
+        p {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 120%;
+          color: #808080;
+          background: url(../public/eye_icon.png) 0 center no-repeat;
+          background-size: 18px;
+
+          @include adaptive(padding-left, 26, 26);
+        }
+      }
+
+      &__comments {
+        p {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 120%;
+          color: #808080;
+          background: url(../public/comment_icon.png) 0 center no-repeat;
+          background-size: 18px;
+
+          @include adaptive(padding-left, 26, 26);
+        }
+      }
+    }
 
     &__sidebar {
       max-width: 380px;
@@ -155,7 +347,8 @@
 
       .category_box,
       .archives_box,
-      .box_tags {
+      .box_tags,
+      .socials_box {
         @include adaptive(margin-bottom, 16, 40);
 
         &__text1 {
@@ -188,9 +381,38 @@
         }
       }
 
+      .socials_box {
+        @include adaptive(margin-bottom, 6, 30);
+
+        &__list {
+          display: inline-flex;
+          flex-wrap: wrap;
+
+          li {
+            @include adaptive(margin-right, 12, 16);
+            @include adaptive(margin-bottom, 10, 12);
+
+            a {
+              display: flex;
+              align-items: center;
+
+              p {
+                @include adaptive(margin-left, 6, 8);
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 120%;
+                color: #3E6480;
+              }
+            }
+          }
+        }
+      }
+
       .box_tags {
         &__list {
           display: inline-flex;
+          flex-wrap: wrap;
 
           li {
             @include adaptive(margin-bottom, 6, 8);
