--- a/assets/sass/main/_variables.scss
+++ b/assets/sass/main/_variables.scss
@@ -5,7 +5,7 @@
   --clr-gray: #596060;
   --clr-accent: #FF6C18;
 
-  --font-main: "Raleway", Arial, Helvetica, sans-serif;
+  --font-main: "Inter", Arial, Helvetica, sans-serif;
 
   --fz56: clamp(20px, 2.91vw, 56px);
   --fz40: clamp(18px, 2.08vw, 40px);
